--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "axios": "^1.4.0",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
+    "react-cookies": "^0.1.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1"
